Update config for RSS sources and dependencies
Ultraworked with [Sisyphus](https://github.com/code-yeongyu/oh-my-opencode)

Co-authored-by: Sisyphus <clio-agent@sisyphuslabs.ai>

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,17 @@ EMAIL_TO=recipient@example.com
 # Fetching
 ARXIV_URL=https://arxiv.org/list/cond-mat/new
 NATURE_URL=https://www.nature.com/subjects/physical-sciences/ncomms
+
+# RSS Sources
+APS_PRL_RSS_URL=https://feeds.aps.org/rss/recent/prl.xml
+# APS PRL section to include (case-insensitive match is handled in fetcher)
+APS_PRL_SECTION_FILTER=Condensed Matter and Materials
+NATURE_JOURNAL_RSS_URL=https://www.nature.com/nature/current_issue/rss
+# Optional comma-separated allowlist for Nature journal RSS categories; empty means disabled
+NATURE_JOURNAL_CATEGORY_ALLOWLIST=
+# Maximum entries processed per RSS feed per run
+RSS_MAX_ENTRIES=200
+
 USER_AGENT=Mozilla/5.0 (compatible; PaperDigest/1.0)
 
 # Keywords (comma-separated)
