Enhance email notifications with source statistics
- Add source count tracking to email digests
- Display checked sources and paper counts per source
- Add _source_counts() helper method
- Update .gitignore to exclude .sisyphus/ and .ruff_cache/
- Create CONTRIBUTING.md for documentation tracking

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# AI/Tool state
+.sisyphus/
+.ruff_cache/
+
+
 # Virtual Environment
 venv/
 env/
@@ -54,3 +59,7 @@ cron.log
 
 # Virtual environment wrapper
 .venv/
+
+
+# Documentation working directory
+docs/
